Added some CSS to showtimes page.

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Voltaire&display=swap" rel="stylesheet">
-    <!-- <link rel="shortcut icon" type="image/jpg" href="/favicon.jpeg"/> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Sunset Drive-In</title>
   </head>
   <body>
